--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "boom": "^7.3.0",
     "fastify": "^2.3.0",
+    "fastify-cors": "^2.1.3",
     "fastify-gql": "^1.1.0",
     "fastify-mongodb": "^1.0.1",
     "fastify-swagger": "^2.4.0",
